--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,11 @@
 
 <body>
 
+<div id="loading" class="loading-main-container">
+  <div class="loading-fixer-container">
+  </div>
+</div>
+
 </body>
 
 {% endblock %}
